--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/global.css" />
-    <link rel="stylesheet" href="./image/"/>
+    <!-- <link rel="stylesheet" href="./image/"/> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"rel="stylesheet"/>
@@ -19,11 +19,11 @@
     <div id="bodyCover">
       <div id="showScreen"></div>
       <div id="inputDiv">
-        <input type="text" id="name" placeholder="Name ...">
-        <input type="text" id="surname" placeholder="Surname ...">
-        <input type="text" id="id" placeholder="ID ...">
-        <input type="text" id="password" placeholder="password ...">
-        <button id="inputSubmit"  onclick="">Submit</button>
+        <input class="inputCl" type="text" id="name" placeholder="Name ...">
+        <input class="inputCl"  type="text" id="surname" placeholder="Surname ...">
+        <input class="inputCl"  type="text" id="id" placeholder="ID ...">
+        <input class="inputCl"  type="text" id="password" placeholder="Password ...">
+        <button class="buttonCl"   id="inputSubmit"  onclick="">Submit</button>
       </div>
 
     </div>
