--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
         <input class="inputCl"  type="text" id="surname" placeholder="Surname ...">
         <input class="inputCl"  type="text" id="id" placeholder="ID ...">
         <input class="inputCl"  type="text" id="password" placeholder="Password ...">
-        <button class="buttonCl"   id="inputSubmit"  onclick="">Submit</button>
+        <button class="buttonCl"   id="inputSubmit"  onclick="submitData()">Submit</button>
       </div>
-
     </div>
 
     <script src="./javascript/script.js"></script>
